get input value function added

--- a/index.html
+++ b/index.html
@@ -15,8 +15,26 @@
 
 </head>
 
-<body>
+<body class="container">
+    <!-- header part start  -->
+    <header>
 
+        <!-- search field  -->
+
+        <div class="input-group mb-3 w-50 mx-auto my-5">
+            <input id="search-field" type="text" class="form-control" placeholder="Search a book name..."
+                aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button onclick="getInputValue()" class="btn btn-outline-secondary" type="button"
+                id="button-addon2">Button</button>
+        </div>
+
+    </header>
+
+    <!-- main part start  -->
+
+    <main>
+
+    </main>
 
 
 
