--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="input-group mb-3 w-50 mx-auto my-5">
             <input id="search-field" type="text" class="form-control" placeholder="Search a book name..."
                 aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button onclick="getInputValue()" class="btn btn-outline-secondary" type="button"
+            <button onclick="loadBookData()" class="btn btn-outline-secondary" type="button"
                 id="button-addon2">Button</button>
         </div>
 
