display book data added and data showed on the website

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     <!-- main part start  -->
 
     <main>
+        <!-- showing all books  -->
+        <div id="books-container" class="row row-cols-1 row-cols-md-3 g-4">
+
+        </div>
 
     </main>
 
