--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                 id="button-addon2">Button</button>
         </div>
 
+        <!-- <div class="d-flex justify-content-center">
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div> -->
+
     </header>
 
     <!-- main part start  -->
