some error handling added

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <div class="input-group mb-3 w-50 mx-auto my-5">
             <input id="search-field" type="text" class="form-control" placeholder="Search a book name..."
                 aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button onclick="loadBookData()" class="btn btn-outline-secondary" type="button"
-                id="button-addon2">Button</button>
+            <button onclick="loadBookData()" class="btn btn-secondary" type="button" id="button-addon2">Search</button>
         </div>
 
         <!-- <div class="d-flex justify-content-center">
@@ -33,6 +32,18 @@
                 <span class="visually-hidden">Loading...</span>
             </div>
         </div> -->
+
+        <!-- search result  -->
+
+        <div id="search-result-container">
+
+        </div>
+
+        <!-- no result found  -->
+
+        <div id="no-result">
+
+        </div>
 
     </header>
 
