--- a/index.html
+++ b/index.html
@@ -24,14 +24,8 @@
         <div class="input-group mb-3 w-50 mx-auto my-5">
             <input id="search-field" type="text" class="form-control" placeholder="Search a book name..."
                 aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button onclick="loadBookData()" class="btn btn-secondary" type="button" id="button-addon2">Search</button>
+            <button onclick="loadBookData()" class="btn btn-primary" type="button" id="button-addon2">Search</button>
         </div>
-
-        <!-- <div class="d-flex justify-content-center">
-            <div class="spinner-border" role="status">
-                <span class="visually-hidden">Loading...</span>
-            </div>
-        </div> -->
 
         <!-- search result  -->
 
