inner html removed and text content added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <body class="container">
     <!-- header part start  -->
     <header>
+        <!-- head line  -->
+        <h1 class="text-center text-white">Welcome to the biggest book-archive in the world!</h1>
 
 
         <!-- search field  -->
