--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
         <!-- search field  -->
 
-        <div class="input-group mb-3 w-50 mx-auto my-5">
-            <input id="search-field" type="text" class="form-control" placeholder="Search a book name..."
+        <div class="input-group mb-3 w-50  mx-auto my-5">
+            <input id="search-field" type="text" class="form-control " placeholder="Search a book name..."
                 aria-label="Recipient's username" aria-describedby="button-addon2">
             <button onclick="loadBookData()" class="btn btn-primary" type="button" id="button-addon2">Search</button>
         </div>
@@ -48,7 +48,7 @@
 
     <main>
         <!-- showing all books  -->
-        <div id="books-container" class="row row-cols-1 row-cols-md-3 g-4">
+        <div id="books-container" class="row row-cols-1 row-cols-md-2 row-cols-sm-1 row-cols-lg-3 g-4">
 
         </div>
 
